# django-drf-playground

./: .coveragerc  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
django_drf_playground/: asgi.py  settings.py  urls.py  wsgi.py
django_drf_playground/apps/to_do_list/: admin.py  apps.py  models.py
django_drf_playground/apps/to_do_list/drf/v1/: views.py
django_drf_playground/apps/to_do_list/drf/v1/serializers/: user.py
django_drf_playground/apps/to_do_list/management/commands/: create_sample_data.py  create_super_user.py
django_drf_playground/apps/to_do_list/migrations/: 0001_initial.py
docs/insomnia/: README.md  django-drf-playground.json
scripts/: start-for-local-development.sh  start-tests.sh
tests/: test_a.py
tests/integration/apps/to_do_list/drf/v1/views/: test_users_route.py
tests/support/: utils.py
tests/unit/apps/to_do_list/drf/v1/serializers/: test_create_user.py
